# RoboArm

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_remote.sh  clean.sh  generate_cmake_files.sh  scheme.graphml
RoboCLI/: CMakeLists.txt
RoboCLI/include/: RoboCLI.h
RoboCLI/src/: RoboCLI.cpp  RoboCLIMain.cpp
RoboController/: CMakeLists.txt
RoboController/include/: KalmanFilter.h  RoboController.h  RoboControllerCommon.h  RoboLogger.h
RoboController/src/: KalmanFilter.cpp  RoboController.cpp  RoboControllerMain.cpp  RoboLogger.cpp
RoboUI/java_backend/Server/: build.gradle
RoboUI/java_backend/Server/src/main/java/RoboArm/UI/Client/: SocketClient.java
RoboUI/java_backend/Server/src/main/java/RoboArm/UI/Server/: HTTPServerVerticle.java
RoboUI/js_backend/: RoboCLIWrapper.js  RoboServer.js  package-lock.json
SimpleSocketServer/: CMakeLists.txt  client.cpp
Standalones/MPU6050/: CMakeLists.txt  MPU6050.h  MPU6050Class.h  main.cpp  mpu6050mux_test.py
Standalones/Multiplexer/: CMakeLists.txt  Multiplexer.cpp  Multiplexer.h  build.sh  generate_cmake_files.sh  main.cpp  mux_tests.cpp
Standalones/Multiplexer/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Standalones/Multiplexer/nbproject/private/: private.xml
Standalones/PCA9685/: CMakeLists.txt  PCA9685.cpp  PCA9685.h  generate_cmake_files.sh  main.cpp
Standalones/ServoCtrl/: CMakeLists.txt  Servo.cpp  Servo.h  generate_cmake_files.sh  main.cpp
Standalones/SimpleSocketServer/: CMakeLists.txt  client.cpp  client.h  client_main.cpp  server.cpp  server.h  server_main.cpp
Standalones/mpu6050mux/: CMakeLists.txt  main.cpp
Standalones/mpu6050mux/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Standalones/servo996Rmux/: CMakeLists.txt  build.sh  main.cpp
Standalones/servo996Rmux/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
